--- a/preload.html
+++ b/preload.html
@@ -66,7 +66,7 @@ h1{font-size:22px;margin:5px 0}
 /* game */
 .game{
   background:#111;
-  height:200px;
+  height:210px;
   border-radius:12px;
   position:relative;
   overflow:hidden;
@@ -98,7 +98,7 @@ h1{font-size:22px;margin:5px 0}
 }
 .overlay h2{margin-bottom:10px}
 .restart{
-  font-size:28px;
+  font-size:30px;
   background:none;
   border:none;
   color:#2ecc71;
@@ -156,7 +156,7 @@ h1{font-size:22px;margin:5px 0}
 
     <div class="overlay" id="overlay">
       <h2>Game Over</h2>
-      <button class="restart" onclick="restart()">🔄</button>
+      <button class="restart" onclick="restart()">▬</button>
     </div>
   </div>
 
@@ -206,15 +206,22 @@ function move(d){
   runner.style.left=50+pos*30+"%";
 }
 
-/* keyboard */
+/* keyboard — معكوس حسب إعداد المتصفح */
 document.addEventListener("keydown",e=>{
-  if(e.key==="ArrowLeft"||e.key==="a") move(-1);
-  if(e.key==="ArrowRight"||e.key==="d") move(1);
+  if(e.key==="ArrowRight"||e.key==="d") move(-1);
+  if(e.key==="ArrowLeft"||e.key==="a") move(1);
 });
 
-function spawn(){
+function spawnWave(){
   if(!playing) return;
 
+  const count=3+Math.floor(Math.random()*2); // 3 أو 4
+  for(let n=0;n<count;n++){
+    spawnItem();
+  }
+}
+
+function spawnItem(){
   const r=Math.random();
   let emoji,type;
   if(r<0.3){emoji="💊";type="pill"}
@@ -233,7 +240,7 @@ function spawn(){
     y+=fallSpeed;
     el.style.top=y+"px";
 
-    if(y>140){
+    if(y>150){
       const lane=parseInt(el.style.left);
       const playerLane=[20,50,80][pos+1];
 
@@ -274,8 +281,8 @@ function restart(){
 }
 
 setInterval(()=>{
-  spawn();
-  if(playing) fallSpeed+=0.05;
+  spawnWave();
+  if(playing) fallSpeed+=0.08;
 },900);
 
 function go(){
