--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </script>
 </head>
 <body>
-
+<button onclick="replayPreload()">🔄 إعادة شاشة التحميل</button>
 <!-- شاشة اختيار الجروب -->
 <div id="group-selection-screen">
   <div id="group-selection-content">
