--- a/preload.html
+++ b/preload.html
@@ -2,211 +2,230 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>Preload Game</title>
+<title>جاري التحميل...</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 body{
   margin:0;
-  background:#111;
+  background:#0d1117;
   color:#fff;
   font-family:Arial;
   overflow:hidden;
 }
 
-/* UI */
-#ui{
+#top{
   display:flex;
   justify-content:space-between;
   padding:8px 12px;
   background:#000;
-  font-size:14px;
 }
 
-/* Game */
 #game{
   position:relative;
-  width:100vw;
-  height:calc(100vh - 120px);
-  background:#222;
+  height:60vh;
+  background:#111;
   overflow:hidden;
 }
 
-/* Player */
 #player{
   position:absolute;
-  bottom:8px;
-  font-size:42px;
+  bottom:10px;
+  font-size:40px;
   left:50%;
   transform:translateX(-50%);
 }
 
-/* Items */
 .item{
   position:absolute;
-  font-size:30px;
+  font-size:28px;
 }
 
-/* Controls (معكوسة) */
 #controls{
   display:flex;
   justify-content:space-around;
-  padding:10px;
   background:#000;
+  padding:10px;
 }
 
 button{
-  font-size:22px;
-  padding:8px 22px;
+  font-size:20px;
+  padding:6px 20px;
 }
 
-/* Game Over */
+#loader{
+  padding:15px;
+  text-align:center;
+}
+
+#bar{
+  height:14px;
+  background:#222;
+  border-radius:10px;
+  overflow:hidden;
+  margin:10px 0;
+}
+
+#progress{
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#00ffcc,#00ccff);
+}
+
 #gameOver{
-  position:fixed;
+  position:absolute;
   inset:0;
   background:rgba(0,0,0,.9);
   display:flex;
   flex-direction:column;
-  align-items:center;
   justify-content:center;
-  z-index:5;
+  align-items:center;
+  z-index:10;
+  display:none;
 }
-
-.hidden{display:none}
 </style>
 </head>
 
 <body>
 
-<div id="ui">
+<div id="top">
   <div>❤️ <span id="hearts">0</span></div>
-  <div>🏆 <span id="score">0</span></div>
+  <div>📦 <span id="percent">0%</span></div>
 </div>
 
 <div id="game">
   <div id="player">👨‍⚕️</div>
+  <div id="gameOver">
+    <h2>Game Over</h2>
+    <button onclick="restart()">🔄 إعادة اللعب</button>
+  </div>
 </div>
 
 <div id="controls">
   <!-- معكوسين -->
-  <button id="btnRight">⬅️</button>
-  <button id="btnLeft">➡️</button>
+  <button onclick="moveRight()">⬅️</button>
+  <button onclick="moveLeft()">➡️</button>
 </div>
 
-<div id="gameOver" class="hidden">
-  <h2>Game Over</h2>
-  <button id="restart">🔄 إعادة اللعب</button>
+<div id="loader">
+  <div id="bar"><div id="progress"></div></div>
+  <button id="continue" style="display:none">▶️ متابعة</button>
 </div>
 
 <script>
-/* ================= GAME ================= */
+/* ===== LOADING ===== */
+const FILES = [
+  "./index.html",
+  "./style.css",
+  "./script.js",
+  "./tracker.js",
+  "./image/wood.webp",
+  "./image/0.png"
+];
 
+let loaded = 0;
+const progress = document.getElementById("progress");
+const percent = document.getElementById("percent");
+const continueBtn = document.getElementById("continue");
+
+FILES.forEach(f=>{
+  fetch(f,{cache:"reload"})
+    .catch(()=>{})
+    .finally(()=>{
+      loaded++;
+      const p = Math.round((loaded/FILES.length)*100);
+      progress.style.width = p+"%";
+      percent.textContent = p+"%";
+      if(p===100) continueBtn.style.display="inline-block";
+    });
+});
+
+continueBtn.onclick=()=>{
+  localStorage.setItem("preload_done","true");
+  location.href="index.html";
+};
+
+/* ===== GAME ===== */
 const game = document.getElementById("game");
 const player = document.getElementById("player");
 const heartsEl = document.getElementById("hearts");
-const scoreEl = document.getElementById("score");
-const gameOverBox = document.getElementById("gameOver");
+const gameOver = document.getElementById("gameOver");
 
-let gameWidth = game.clientWidth;
-let playerX = gameWidth / 2;
+let px = game.clientWidth/2;
 let hearts = 0;
-let score = 0;
-let speed = 2;
 let running = true;
 
-/* Player */
-function updatePlayer(){
-  if(playerX < 0) playerX = 0;
-  if(playerX > gameWidth - 40) playerX = gameWidth - 40;
-  player.style.left = playerX + "px";
-}
+function moveLeft(){ px += 30; update(); }
+function moveRight(){ px -= 30; update(); }
 
-/* Controls (معكوسة) */
-function moveLeft(){ playerX += 30; updatePlayer(); }
-function moveRight(){ playerX -= 30; updatePlayer(); }
-
-document.getElementById("btnLeft").onclick = moveRight;
-document.getElementById("btnRight").onclick = moveLeft;
-
-document.addEventListener("keydown", e=>{
-  if(!running) return;
-  if(e.key === "ArrowLeft") moveRight();
-  if(e.key === "ArrowRight") moveLeft();
+document.addEventListener("keydown",e=>{
+  if(e.key==="ArrowLeft") moveRight();
+  if(e.key==="ArrowRight") moveLeft();
 });
 
-/* Spawn */
-function createItem(){
+function update(){
+  px=Math.max(0,Math.min(game.clientWidth-40,px));
+  player.style.left=px+"px";
+}
+
+function spawn(){
   if(!running) return;
+  for(let i=0;i<2;i++) drop();
+  setTimeout(spawn,1200);
+}
 
-  const el = document.createElement("div");
-  el.className = "item";
-
-  const r = Math.random();
-  el.textContent = r < 0.4 ? "🦠" : r < 0.7 ? "☣️" : "💊";
-
-  el.style.left = Math.random() * (gameWidth - 30) + "px";
-  el.style.top = "0px";
+function drop(){
+  const el=document.createElement("div");
+  el.className="item";
+  const r=Math.random();
+  el.textContent=r<.4?"🦠":r<.7?"☣️":"💊";
+  el.style.left=Math.random()*(game.clientWidth-30)+"px";
+  el.style.top="0px";
   game.appendChild(el);
 
-  let y = 0;
+  let y=0;
+  function fall(){
+    if(!running){el.remove();return;}
+    y+=3;
+    el.style.top=y+"px";
 
-  const fall = () => {
-    if(!running){ el.remove(); return; }
+    if(y>game.clientHeight/2 && !el.spawned){
+      el.spawned=true;
+      drop();drop();
+    }
 
-    y += speed;
-    el.style.top = y + "px";
-
-    const p = player.getBoundingClientRect();
-    const i = el.getBoundingClientRect();
-
-    if(i.bottom > p.top && i.left < p.right && i.right > p.left){
+    const p=player.getBoundingClientRect();
+    const i=el.getBoundingClientRect();
+    if(i.bottom>p.top && i.left<p.right && i.right>p.left){
       hit(el.textContent);
-      el.remove();
-      return;
+      el.remove();return;
     }
 
-    if(y < game.clientHeight){
-      requestAnimationFrame(fall);
-    }else{
-      el.remove();
-      score++;
-      scoreEl.textContent = score;
-    }
-  };
-
+    if(y<game.clientHeight) requestAnimationFrame(fall);
+    else el.remove();
+  }
   fall();
 }
 
-/* Hit */
-function hit(type){
-  if(type === "💊") hearts++;
-  if(type === "🦠") hearts--;
-  if(type === "☣️") hearts -= 2;
-
-  heartsEl.textContent = hearts;
-  if(hearts < 0) endGame();
+function hit(t){
+  if(t==="💊") hearts++;
+  if(t==="🦠") hearts--;
+  if(t==="☣️") hearts-=2;
+  heartsEl.textContent=hearts;
+  if(hearts<0) end();
 }
 
-/* Loop */
-function loop(){
-  if(!running) return;
-  createItem();
-  createItem(); // اتنين
-  speed += 0.1;
-  setTimeout(loop, 1300);
+function end(){
+  running=false;
+  gameOver.style.display="flex";
 }
 
-/* End */
-function endGame(){
-  running = false;
-  gameOverBox.classList.remove("hidden");
+function restart(){
+  location.reload();
 }
 
-document.getElementById("restart").onclick = ()=>location.reload();
-
-/* Init */
-updatePlayer();
-loop();
+update();
+spawn();
 </script>
 
 </body>
